# simt-emlite

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  README.pypi.md  build_cython_wheel.py  config.daily-hmce.properties  config.daily-wlce.properties  emlite.env.example  emlite.local.env  mediator.env.example  pom.xml  pyproject.toml  requirements.txt  setup.py  setup_cython.py
.agent/workflows/: checks.md
.github/workflows/: build-wheels.yml  deploy-mediator.yml  docker-image.yml  maven.yml  python-package.yml  python-test.yml
docker/: Dockerfile  Dockerfile.mediator_server  Dockerfile.meter_health_check  Dockerfile.server  docker-compose.example.yml  docker-compose.mediator.yml  entrypoint.sh
emlite/: .gitignore  pom.xml
emlite-api/: pom.xml
emlite/api/: emlite_api.py  emlite_net.py
emlite/docker/: Dockerfile.sync_to_db  docker-compose.mediator.yml
emlite/grpc/: emlite-mediator-client.py  emlite-mediator-server.py  emlite-mediator.proto  grpc_generate.py
emlite/messages/: emlite_data.ksy  emlite_data.py  emlite_frame.py  emlite_object_id_enum.py  emlite_response.ksy  emlite_response.py
emlite/orchestrate/: run_syncers.py
emlite/sync/: __init__.py  sync_to_db.py
emlite_mediator/cli/: main.py
emlite_mediator/emlite/: emlite_api.py  emlite_net.py  emlite_util.py
emlite_mediator/emlite/cli/: dump_frame.py
emlite_mediator/emlite/messages/: emlite_data.ksy  emlite_data.py  emlite_frame.ksy  emlite_frame.py  emlite_message.ksy  emlite_message.py  (+3 more)
emlite_mediator/jobs/: meter_csq_sync.py  meter_health_check.py  meter_prepay_sync.py  meter_sync.py  util.py
emlite_mediator/mediator/: client.py
emlite_mediator/orchestrate/: mediators.py  run_health_checks.py  run_jobs_base.py  run_jobs_manage_mediators_base.py  run_meter_csq_syncs.py  run_meter_health_checks.py  run_meter_prepay_syncs.py  run_meter_syncs.py
emlite_mediator/sync/: __init__.py  syncer_base.py  syncer_clock_diff.py  syncer_csq.py  syncer_firmware_version.py  syncer_hardware.py  syncer_prepay_balance.py  syncer_prepay_enabled.py  syncer_serial.py  syncer_voltage.py
emlite_mediator/util/: logging.py  supabase.py
fly/: fly-eml2424295755.toml  fly-eml2424295768.toml  fly-mediator-mgf.template.toml  fly-mediator-mgf.toml  fly-tls-auth.template.toml  fly.toml.template
infra/certificates/: server_cert_qa.pem
infra/local-stack/: README.md  docker-compose.yml  socks_proxy.env
infra/monitoring/: .gitignore  docker-compose.prometheus-grafana.yml
infra/systemd/: mediator-health-checks.service  mediator-health-checks.timer  mediator-prepay-sync.timer  meter-sync-12hourly.service  meter-sync-12hourly.timer  meter-sync-daily.service  meter-sync-daily.timer  meter-sync-hourly.service  meter-sync-hourly.timer  openvpn-restart.timer  papertrail.service
mediator/: README.md  pom.xml
scripts/: build_cython.py  setup_mediator_mgf.py  test_emop_with_cython_build.py
simt_emlite/: __init__.py
simt_emlite/certificates/: README.md  __init__.py.deprecated  server_cert_local.pem  server_cert_prod.pem
simt_emlite/cli/: certs.py  emop.py  emopv2.py  main.py  mediators.py  profile_download.py  replica_check_missing.py  replicas_compare.py
simt_emlite/dto/: three_phase_intervals.py
simt_emlite/emlite/: emlite_api.py  emlite_net.py
simt_emlite/jobs/: auto_topup_job.py  future_tariffs_update.py  future_tariffs_update_all.py  mediators_recover_failed.py  meter_sync.py  meter_sync_all.py  prepay_enabled_flip.py  profile_log_fetch.py  push_token.py  push_token_all.py  push_topup_token.py  push_topup_tokens_all.py  three_phase_intervals_fetch.py  update_meter_clocks.py  util.py
simt_emlite/mediator/: __init__.py  api_core.py  api_management.py  api_prepay.py  client.py  client2.py  mediator_client_exception.py  validation.py
simt_emlite/orchestrate/: mediators.py  run_jobs_base.py  run_meter_syncs.py
simt_emlite/profile_logs/: download_cache.py  downloader_config.py  group_config.py  profile_converter.py  profile_downloader.py  replica_utils.py
simt_emlite/smip/: __init__.py  smip_csv.py  smip_csv_record.py  smip_file_finder.py  smip_file_finder_result.py  smip_filename.py  smip_reading.py  smip_reading_factory.py
simt_emlite/sync/: __init__.py  syncer_backlight.py  syncer_base.py  syncer_clock_diff.py  syncer_csq.py  syncer_daylight_savings_enabled.py  syncer_event_log.py  syncer_firmware_version.py  syncer_hardware.py  syncer_load_switch.py  syncer_prepay_balance.py  syncer_prepay_enabled.py  syncer_reads.py  syncer_serial.py  syncer_tariffs_active.py  syncer_tariffs_future.py  syncer_voltage.py
simt_emlite/util/: config.py  logging.py  meters.py  supabase.py  three_phase_intervals.py  timestamp.py
stubs/emop_frame_protocol/: __init__.pyi  emop_profile_log_1_record.pyi  emop_profile_log_2_record.pyi
tests/: __init__.py
tests/messages/: test_emlite_data.py  test_emlite_frame.py  test_emlite_response.py
timers/: mediator-csq-sync.service  mediator-csq-sync.timer  mediator-health-checks.service  mediator-prepay-sync.service  mediator-prepay-sync.timer  openvpn-restart.service  openvpn-restart.timer
(+111 files in other folders)
