[project]
name = "simt-emlite"
version = "0.28.8"
description = "API and CLI for communicating with the Emlite meters via EMOP"
authors = [{ name = "Chris Hatch", email = "chris@cepro.energy" }]
requires-python = ">=3.13,<4.0"
readme = "README.pypi.md"
dependencies = [
    "grpcio==1.73.1",
    "tenacity==8.5.0",
    "supabase==2.15.2",
    "crcmod==1.7",
    "structlog==24.4.0",
    "docker==7.1.0",
    "protobuf==6.31.1",
    "python-dotenv==1.0.1",
    "python-socks==2.5.0",
    "rich==13.7.1",
    "dnspython==2.6.1",
    "httpx==0.27.0",
    "argcomplete>=3.4.0",
    "types-requests==2.32.4.20250611",
    "emop-frame-protocol==0.4.14",
    "simt-fly-machines==0.2.4",
    "javaproperties (>=0.8.2,<0.9.0)",
]

[project.scripts]
test = "simt_emlite:run_tests"
lint = "simt_emlite:run_linter"
build-cython = "scripts.build_cython:main"
emop = "simt_emlite.cli.emop:main"
mediators = "simt_emlite.cli.mediators:main"
profile_download = "simt_emlite.cli.profile_download:main"

[tool.poetry]
packages = [{ include = "simt_emlite" }]
exclude = ["tests", "*.env", "simt_emlite/**/*.py"]

[tool.poetry.group.dev.dependencies]
ruff = "0.12.5"
mypy = "1.16.1"
cython = "3.1.2"
build = "1.2.2.post1"
cibuildwheel = "3.0.0"
grpcio-tools = "1.73.1"
pre-commit = "^4.5.0"

[tool.ruff]
extend-exclude = ["generated"]

[tool.mypy]
python_version = "3.13"
exclude = "generated/"
mypy_path = "stubs"
# disable strict until we've fixed all the issues:
# strict = true
check_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"
