[project]
name = "simt-emlite"
version = "1.0.0"
description = "API and CLI for communicating with the Emlite meters via EMOP"
authors = [{ name = "Chris Hatch", email = "chris@simtricity.com" }]
requires-python = ">=3.13,<4.0"
readme = "README.pypi.md"
dependencies = [
    "grpcio (>=1.76.0,<2.0.0)",
    "tenacity==9.1.2",
    "supabase==2.27.1",
    "crcmod==1.7",
    "structlog==25.5.0",
    "docker==7.1.0",
    "protobuf==6.33.3",
    "python-dotenv==1.2.1",
    "python-socks==2.8.0",
    "rich==14.2.0",
    "dnspython==2.8.0",
    "httpx==0.28.1",
    "argcomplete>=3.4.0",
    "types-requests==2.32.4.20260107",
    "emop-frame-protocol==0.4.14",
    "simt-fly-machines==0.2.6",
    "javaproperties (>=0.8.2,<0.9.0)",
    "types-grpcio (>=1.0.0.20251009,<2.0.0.0)",
]

[project.scripts]
test = "simt_emlite:run_tests"
lint = "simt_emlite:run_linter"
build-cython = "scripts.build_cython:main"
emop = "simt_emlite.cli.emop:main"
emopv2 = "simt_emlite.cli.emopv2:main"
mediators = "simt_emlite.cli.mediators:main"
profile_download = "simt_emlite.cli.profile_download:main"

[tool.poetry]
packages = [{ include = "simt_emlite" }]
exclude = ["tests", "*.env", "simt_emlite/**/*.py"]

[tool.poetry.group.dev.dependencies]
ruff = "0.14.11"
mypy = "1.19.1"
cython = "3.2.4"
build = "1.4.0"
cibuildwheel = "3.3.1"
grpcio-tools = "1.76.0"
pre-commit = "^4.5.1"

[tool.ruff]
extend-exclude = ["generated"]

[tool.mypy]
python_version = "3.13"
exclude = "generated/"
mypy_path = "stubs"
# disable strict until we've fixed all the issues:
# strict = true
check_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"
